--- a/src/app/screens/user-agreement/user-agreement.component.html
+++ b/src/app/screens/user-agreement/user-agreement.component.html
@@ -97,3 +97,128 @@
 
 
 </div>
+
+
+
+<div class="agreement">
+    <h1>Regular payments offer</h1>
+
+    <p class="important">
+        AGREEMENT ON PROVIDING INDIVIDUALS OF THE POSSIBILITY OF PAYMENT FOR GOODS / WORKS / SERVICES IE GAZRATOV RENAT SABIROVICH THROUGH REGULAR AUTOMATIC MONEY TRANSFERS. 
+    </p>
+
+    <p class="important">
+        IE Gazratov Renat Sabirovich, registered at the address 368600(zip code), Russia, rep. Dagestan, Derbent, acting on the basis of certificate 321057100038156, hereinafter referred to as the Supplier, invites Users to use the Recurrent Debit Service and conclude this agreement (hereinafter referred to as the Agreement), which is an addition to the Agreement and an integral part of the Agreement, on determining the procedure for settlements under the Agreement. The User unconditionally agrees with this Service Agreement by performing implicit actions to connect the Recurrent Debit Service at the time the User accepts this Service Agreement and perform actions to activate the Recurring Debit Service.
+    </p>
+
+    <div class="content">
+
+        <div class="info-block">
+            <h2>Terms and definitions</h2>
+            <div class="info">
+                <p> <span class="name">The Recurring Debit Service</span> - a service for the implementation of regular automatic transfers of funds from the Holder's Bank Card in favor of the Supplier for the goods / services provided by the Supplier under the Agreement on the basis of the previously given acceptance of the Cardholder, in accordance with the tariffs and options under the Agreement.  </p>
+                <p> <span class="name">Contract</span> - a bilateral agreement concluded between the User and the Supplier under the terms of which the Supplier undertakes to provide the User with the Service, and the latter undertakes to pay for them. </p>
+                <p> <span class="name">Service / Product</span> - the provision by the Supplier of a service / product from the range of the site <a href="https://cactussoft.io" class="pointer">https://cactussoft.io</a>.</p>
+                <p> <span class="name">User</span> - an individual who has entered into an Agreement with the Supplier.</p>
+                <p> <span class="name">Bank</span> - credit institution - JSC "Tinkoff Bank" BIK: 044525974K / s: 30101810145250000974</p>
+                <p> <span class="name">Request</span> - an information message sent by the Bank to the Issuing Bank to transfer funds from the Bank card to for the benefit of the Supplier. </p>
+                <p> <span class="name">The issuing bank</span> - a credit institution that issues Bank cards, as well as settlements for transactions performed using Bank cards. </p>
+                <p> <span class="name">Processing center</span> - JSC "Tinkoff Bank" BIK: 044525974K / s: 30101810145250000974. </p>
+                <p> <span class="name">Cardholder</span> - an individual who gives an order to the Issuing Bank to transfer funds from the Bank Card on behalf of the User in favor of the Supplier using the "Recurring Debit" Service. </p>
+                <p> 
+                    <span class="name">Bank card</span> - payment or credit card issued by
+                    The Issuing Bank, which is a non-cash settlement instrument, intended for the Cardholder to perform transactions with funds in the Cardholder's bank accounts with the Issuing Bank, or with funds provided by the Issuing Bank on credit to the Cardholder in accordance with
+                    the legislation of the Russian Federation, as well as the bank account agreement, or within the established limit, in accordance with the terms of the loan agreement
+                    between the Issuing Bank and the Cardholder, provided that such payment or credit card can be used by the Cardholder to pay for the Supplier's Services. Payment for the Supplier's Services in accordance with this Agreement is possible with Bank cards of payment systems VISA International, MasterCard
+                    International, registered in accordance with the current legislation of the Russian Federation. At the same time, the issuing bank establishes the possibility of using specific types of VISA International and MasterCard International cards. 
+                </p>
+                <p> <span class="name">User Acceptance</span>  - the User's unconditional agreement with the terms of this Agreement.</p>
+                <p> <span class="name">Personal Account</span> - a section of the Supplier's Site, protected by an access control system that provides the User with an interface for interacting with the Supplier under the Agreement. </p>
+                <p> <span class="name">Supplier's Site</span> - a site located on the Internet at: <a href="https://cactissoft.io" class="pointer">https://cactussoft.io</a>.</p>
+            </div>
+        </div>
+
+        <div class="info-block">
+            <h2>1. Description of the service "recurrent charges" and the method of its activation.</h2>
+            <div class="info">
+                <p>1.1 Activation (connection) of the Service "Recurring write-offs" involves the following actions: </p>
+                <p class="point">1.1.1. On the purchase page of the Supplier's Website, the User enters an e-mail mail and clicks the "Purchase" button. After paying for the goods selected by the User, the service “Recurring write-offs” is connected.</p>
+                <p class="point">1.1.2. In the personal account of the Supplier's Site, the User clicks the “Activate” button in the “Auto-payment” section. After that, the User pays the minimum amount to connect to the “Recurring Debit” Service. Funds are immediately returned to the User's Bank card, but Recurring debits will be made from the Bank card. </p>
+            </div>
+        </div>
+
+        <div class="info-block">
+            <h2>2. Action of the Service "Recurring debits"</h2>
+            <div class="info">
+                <p>2.1. After connecting the Service "Recurring Debit", funds will be transferred from the Bank Card in the time and amount necessary for the proper performance of the User's obligations under the Agreement. </p>
+                <p>2.2. Direct debiting of funds is carried out by the Issuing Bank on the basis of the User's prior consent to such a write-off in the amount and within the period specified in the Agreement. A request for a transfer of funds with an indication of the amount of transfer to the Issuing Bank is submitted by the Bank and the Processing Center within the framework of the agreements concluded with the Supplier. </p>
+                <p>2.3. At one point in time, the User can activate (connect) the Service "Recurring debits" only for one Bank card of the payment system Visa (Visa Inc.), MasterCard or Maestro (MasterCard International Inc.).</p>
+                <p>2.4. The Supplier does not store and process the data of the User's bank cards, as well as other personal data of the Users, providing only requests to the Processing Center and the Bank for the repeated operation of the User's bank card. </p>
+                <p>2.5. The Supplier does not guarantee the possibility of carrying out operations with the Bank Card.</p>
+                <p>2.6. The User guarantees that he is the Bank Card Holder, consciously, correctly and completely enters all the required Bank Card details when activating (connecting) the Recurring Debit Service.</p>
+                <p>2.7. Performing the actions provided for in clause 1.1.1 and 1.1.2 Of the Agreement is recognized as an analogue of the User's handwritten signature.</p>
+                <p>2.8. Connection of the Service "Recurring debits", in the manner prescribed by this Agreement for the use of the service, is carried out only if the Supplier, the Processing Center, the Bank, of the Issuing Bank are technically able. The Supplier, the Processing Center, the Bank are not responsible for the impossibility of connecting Service "Recurring write-offs."</p>
+                <p>2.9. The Supplier has the right to amend this Service Agreement by notifying the User in writing in advance or by any other available means, including by sending an e-mail specified in the Agreement by the User, or by telephone message, or by posting information on Supplier's website. </p>
+                <p>2.10 Funds are debited from the User's Bank card once a calendar month. </p>
+                <p>2.11 The date of the next debiting the User can view in the personal account of the Supplier's website.</p>
+            </div>
+        </div>
+
+        <div class="info-block">
+            <h2>3. Disabling the Service "Recurring write-offs".</h2>
+            <div class="info">
+                <p>3.1. Disconnection (refusal) of the User from the "Recurring Debit" Service occurs: </p>
+                <p class="point">
+                    A) In the "Personal Account" the User clicks the "Cancel" button in the "Auto-payment" section <br> 
+                    In this case, the funds transferred from the Bank Cards are not returned to the User until the User is disconnected (refused) from the Service "Recurring Debit" for the Services
+                </p>
+                <p>3.2. In case of insufficient funds on the Bank Card account for making a transfer, the Supplier has the right to repeat the request to write off funds from the Bank Card.</p>
+            </div>
+        </div>
+
+
+        <div class="info-block">
+            <h2>4. Restrictions when using the Recurrent Debit Service.</h2>
+            <div class="info">
+                <p>4.1. no more than 5 (five) transfers per day can be made from one Bank Card</p>
+                <p>4.2. no more than 15,000 rubles can be transferred from one Bank card for one operation</p>
+                <p>4.3. no more than 50,000 rubles per day can be transferred from one Bank card</p>
+                <p>4.4. the transition to the page "Make a payment" is possible only if the User has an Internet connection, regardless of the current state of the account.</p>
+            </div>
+        </div>
+
+        <div class="info-block">
+            <h2>5. Responsibility of the parties.</h2>
+            <div class="info">
+                <p>
+                    5.1. The Supplier, the Processing Center, the Bank is not responsible for the inoperability and / or temporary inoperability of the "Recurrent 
+                    Debit" Service. The User independently controls the fulfillment of his obligation to pay under the Agreement. In case of inoperability and / or temporary 
+                    inoperability of the "Recurring Debit" Service, the User is obliged to use other methods of fulfilling obligations under the Agreement. 
+                </p>
+                <p>5.2.Disputes between the parties arising in connection with the fulfillment of the terms of this Agreement are resolved in the course of sending claims.</p>
+                <p>5.3. If the Parties fail to reach mutual agreement, disputes between them are resolved in accordance with the terms of the Agreement and the Offer. </p>
+            </div>
+        </div>
+
+        <div class="info-block">
+            <h2>6. Other terms and conditions.</h2>
+            <div class="info">
+                <p>6.1. Performing actions to connect the Service "Recurring write-offs": </p>
+                <p class="point">A) The User unconditionally agrees with all the terms of this Agreement. </p>
+                <p class="point">B) The User gives in advance this acceptance for the write-off of funds {{1}} Supplier from a Bank Card on the terms of this Agreement. </p>
+                <p class="point">
+                    C) The User grants the Processing Center, the Bank the right to store, collect, process his personal data (Surname, Name, Patronymic, passport series and number 
+                    , place and date of birth, current account and Bank card number ) in order to implement this Agreement. 
+                    </p>
+                <p class="point">D) The User agrees to pay for the Services in accordance with the terms of the Agreement</p>
+                <p>6.2. The Provider has the right to disconnect and / or restrict the User from the Service</p>
+            </div>
+        </div>
+
+        <div class="info-block">
+            <h1>«Recurring write-offs»</h1>
+            <p class="important">RIGHTS AND OBLIGATIONS OF THE USER AND THE SUPPLIER ARISING FROM THIS OFFER CANNOT BE TRANSFERRED TO THIRD PARTIES WITHOUT WRITTEN CONSENT OF THE OTHER PARTY. I, the USER, ARE AWARE AND AGREE WITH THIS AGREEMENT FOR USE OF THE "RECURRENT PAYMENTS" SERVICE, WITH AUTOMATIC CHARGING OF MONEY FROM THE BANK CARD for the Supplier's services under the Agreement.</p>
+        </div>
+
+    </div>
+</div>
