--- a/src/app/screens/user-agreement/user-agreement.component.scss
+++ b/src/app/screens/user-agreement/user-agreement.component.scss
@@ -44,6 +44,13 @@ p.important{
 p{
     font-size: 16px;
     font-weight: 300;
+    &.point{
+        margin-left: 20px;
+    }
+
+    span.name{
+        font-weight: 500;
+    }
 }
 
 h2{
