--- a/src/app/components/home-tools/home-tools.component.html
+++ b/src/app/components/home-tools/home-tools.component.html
@@ -3,8 +3,8 @@
     <h2>Tools</h2>
 
     <div class="btns" id="horizontal-scroll-btns">
-        <button id="cactus-scripts" class="active">CactusScripts</button>
-        <button id="cactus-alo">CactusALO</button>
+        <button id="cactus-scripts" class="active">Scripts</button>
+        <button id="cactus-alo">Discord Tools</button>
     </div>
 
     <div class="underlay" for="horizontal-scroll">
