--- a/src/app/components/tool-discord-alo/tool-discord-alo.component.scss
+++ b/src/app/components/tool-discord-alo/tool-discord-alo.component.scss
@@ -4,19 +4,46 @@ $tab-size: 900px;
     width: 490px;
 }
 
-@media screen and ( max-width: $tab-size ) {
-    .img{
-        padding: 0px 15px;
-        img{
-            width: 100%;
-            max-width: 500px;
-
-        }
-    }
-
-}
 
 
 .tool{
     column-gap: 60px;
+}
+
+
+
+
+.slider{
+    display: grid;
+    // width: 100%;
+    // height: 100%;
+
+    width: 780px;
+    height: auto;
+
+    align-self: center;
+    // *:not(.slider__control){
+    //     width: inherit;
+    //     height: inherit;
+    // }
+
+    @media screen and ( max-width: $tab-size ) {
+            // padding: 0px 15px;
+            width: 100%;
+            max-width: 500px;
+            grid-row: 2/3;
+    }
+    
+}
+
+.slider__wrapper{
+    display: grid;
+}
+
+
+.slider__item{
+    overflow: hidden;
+    img{
+        width: 100%;
+    }
 }
