--- a/src/app/components/home-tools/home-tools.component.scss
+++ b/src/app/components/home-tools/home-tools.component.scss
@@ -32,7 +32,7 @@ $tab-size: 900px;
         grid-template-columns: auto;
         grid-auto-flow: row;
         padding: 0px 15px;
-        overflow: auto;
+        overflow: initial;
         justify-content: center;
         row-gap: 60px;
     }
