--- a/src/app/components/tool-discord-alo/tool-discord-alo.component.html
+++ b/src/app/components/tool-discord-alo/tool-discord-alo.component.html
@@ -1,56 +1,43 @@
 <div class="tool">
-    <div class="img">
-        <img src="/assets/img/tools/discord-alo.png" alt="Discord ALO Screenshoot">
+    
+    <div class="slider" id="discord">
+        <div class="slider__wrapper">
+          <div class="slider__items">
+            <div class="slider__item">
+                <img src="/assets/img/tools/discord-1.png" alt="" zoom-img>
+            </div>
+            <div class="slider__item">
+                <img src="/assets/img/tools/discord-2.png" alt="" zoom-img>
+            </div>
+            <div class="slider__item">
+                <img src="/assets/img/tools/discord-3.png" alt="" zoom-img>
+            </div>
+          </div>
+        </div>
+        <!-- Стрелки для перехода к предыдущему и следующему слайду -->
+        <button class="slider__control slider__control_prev"  role="button" data-slide="prev"></button>
+        <button class="slider__control slider__control_next"  role="button" data-slide="next"></button>
     </div>
+    <!-- <div class="img">
+        <img src="/assets/img/tools/discord-alo.png" alt="Discord ALO Screenshoot">
+    </div> -->
 
     <div class="info">
-        <h3>Cactus ALO</h3>
+        <h3>Discord Tools</h3>
         <p class="descript">
-            Web-based software. <br> No need to download files, <br> just open the browser with one click.
+            Several tools aimed at speeding up <br> your work with the Discord.
+            <!-- Web-based software. <br> No need to download files, <br> just open the browser with one click. -->
         </p>
         
         <div class="features">
 
-            <div class="feature">
+            <div class="feature" *ngFor="let feature of featurePoints">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
                     <circle cx="9" cy="9" r="9" fill="#00AE98"/>
                     <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                Discord link opener
-            </div>
-            <div class="feature">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                    <circle cx="9" cy="9" r="9" fill="#00AE98"/>
-                    <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-
-                Discord joiner
-            </div>
-            <div class="feature">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                    <circle cx="9" cy="9" r="9" fill="#00AE98"/>
-                    <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-
-                Discord nitro claimer
-            </div>
-
-            <div class="feature">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                    <circle cx="9" cy="9" r="9" fill="#00AE98"/>
-                    <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-
-                QR Decoder
-            </div>
-            <div class="feature">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                    <circle cx="9" cy="9" r="9" fill="#00AE98"/>
-                    <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-
-                Webhooks
+                {{ feature }}
             </div>
 
         </div>
