--- a/src/styles.scss
+++ b/src/styles.scss
@@ -313,7 +313,7 @@ canvas{
 
     .info{ 
         display: grid;
-        row-gap: 40px;
+        row-gap: 30px;
         align-content: center;
         text-align: left;
     }
@@ -398,4 +398,67 @@ canvas{
     transform: translate(-50%, -50%);
     z-index: 0;
 
+}
+
+
+
+
+
+#zoom-img-icon{
+    width: 38px;
+    height: 38px;
+    border-radius: 8px;
+    background: rgba(229, 229, 229, 0.1);
+    background-image: url('/assets/img/icons/search.svg');
+    box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(8px);
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: .3s;
+    
+    &.show{
+        opacity: 1;
+    }
+    @media screen and ( max-width: 780px ) {
+        display: none;
+    }
+}
+
+
+
+#zoomed-img-wrapper{
+    display: grid;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    height: 100vh;
+    width: 100%;
+    z-index: 5;
+
+    @media screen and ( max-width: 780px ) {
+        display: none;
+    }
+
+    .artboard{
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        backdrop-filter: blur(4px);
+        background-color: #00000003;
+    }
+
+    img{
+        max-height: 60vh;
+        max-width: 75vw;
+        height: 100%;
+        justify-self: center;
+        align-self: center;
+        z-index: 2;
+    }
 }
