добавил блок Pricing

--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -10,6 +10,7 @@
             <app-home-tools></app-home-tools>
             <app-home-features></app-home-features>
             <app-home-faq></app-home-faq>
+            <app-pricing></app-pricing>
         </main>
         <app-home-footer></app-home-footer>
     </section>
