--- a/src/app/components/home-footer/home-footer.component.scss
+++ b/src/app/components/home-footer/home-footer.component.scss
@@ -48,7 +48,7 @@ div.bg{
 
 .contacts{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto auto auto;
     justify-self: center;
     column-gap: 30px;
     row-gap: 10px;
@@ -62,6 +62,7 @@ div.bg{
 
     @media screen and ( max-width: $tab-size ) {
         grid-template-columns: 1fr ;
+        justify-items: center;
     }
 }
 
