добавил ссылку в pricing

--- a/src/app/components/pricing/pricing.component.html
+++ b/src/app/components/pricing/pricing.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="card card_big">
             <h3 class="card__title">Special keys</h3>
-            <p class="card__description">Special type of keys for those who want to immediately get a license</p>
+            <p class="card__description">Special type of keys for those who want to immediately get a license. <a href="https://discord.gg/5fhkXKUajH" target="_blank" rel="noopener">Contact us</a> </p>
             <div class="card__price-info">
                 <p class="card__price-row price-row">
                     <span class="price-row__title">Initial</span>
