ready for deploy

--- a/src/app/components/home-faq/home-faq.component.html
+++ b/src/app/components/home-faq/home-faq.component.html
@@ -11,21 +11,21 @@
             <h3>How can I purchase CactusSoft? </h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
             
-            <p>Make sure to follow our social media <br> and have notifications on for future restocks.</p>
+            <p>You can mint our NFT to have access to CactusSoft+ or buy the NFT on the OpenSea.</p>
         </div>
         
         <div class="card">
             <span class="hr"></span>
             <h3>What's CactusSoft's retail price?</h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
-            <p>Initial cost is $35 (first month included), <br> renewal is $20/month.</p>
+            <p>Initial cost is 0.3 ETH (first month included), <br> renewal is 0.05 ETH/month</p>
         </div>
          
         <div class="card">
             <span class="hr"></span>
             <h3>Can I resell my license?</h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
-            <p>We offer both resellable and non-resellable <br> copies. All unbindable keys are resalable.
+            <p>All CactusSoft+ licenses are resellable. <br> You can resell it via OpenSea.
             </p>
         </div>
         
