--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,8 +13,8 @@
         </a>
     </ng-template>
 
-    <a class="bg-btn" href="https://dash.cactussoft.io/bind">
-        Dashboard
+    <a class="bg-btn" routerLink="mint">
+        Mint
     </a>
 
 </nav>
