--- a/src/app/components/tool-discord-alo/tool-discord-alo.component.html
+++ b/src/app/components/tool-discord-alo/tool-discord-alo.component.html
@@ -39,6 +39,29 @@
 
                 {{ feature }}
             </div>
+            <div class="feature">
+                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18" fill="none">
+                    <path d="M8.60929 0.745359C8.98043 0.0181082 10.0196 0.018109 10.3907 0.74536L12.4163 4.71459C12.5616 4.99931 12.8343 5.19741 13.15 5.24762L17.5509 5.94755C18.3573 6.07579 18.6784 7.06408 18.1014 7.64179L14.9524 10.7948C14.7265 11.021 14.6224 11.3415 14.6722 11.6573L15.3665 16.0591C15.4937 16.8656 14.653 17.4764 13.9252 17.1062L9.95342 15.0857C9.66851 14.9407 9.33149 14.9407 9.04658 15.0857L5.07475 17.1062C4.34703 17.4764 3.50634 16.8656 3.63355 16.0591L4.32783 11.6573C4.37764 11.3415 4.27349 11.021 4.04761 10.7948L0.898596 7.64179C0.321627 7.06408 0.642743 6.07579 1.44909 5.94755L5.85001 5.24762C6.16569 5.19741 6.43835 4.99931 6.58365 4.71459L8.60929 0.745359Z" fill="#E4DC19"/>
+                </svg>
+
+                Discord AI message spammer
+            </div>
+            <div class="feature">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                    <circle cx="9" cy="9" r="9" fill="#00AE98"/>
+                    <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+
+                Many other scripts available
+            </div>
+            <div class="feature">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                    <circle cx="9" cy="9" r="8.5" stroke="#00AE98"/>
+                    <path d="M12 9H9M9 9H6M9 9V12M9 9V6" stroke="#00AE98" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+
+                Many more in development
+            </div>
 
         </div>
     </div>
