--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -8,9 +8,12 @@
     <section class="section main" >
         <main>
             <app-home-tools></app-home-tools>
+            <app-about></app-about>
             <app-home-features></app-home-features>
+            <app-roadmap></app-roadmap>
             <app-home-faq></app-home-faq>
-            <app-pricing></app-pricing>
+            <!-- <app-pricing></app-pricing> -->
+            <app-doxxed></app-doxxed>
         </main>
         <app-home-footer></app-home-footer>
     </section>
