--- a/src/app/screens/user-agreement/user-agreement.component.html
+++ b/src/app/screens/user-agreement/user-agreement.component.html
@@ -1,4 +1,4 @@
-<app-navbar [isRouterLink]="false"></app-navbar>
+<!-- <app-navbar [isRouterLink]="false"></app-navbar> -->
 
 
 <div class="agreement">
