--- a/src/app/components/home-features/home-features.component.html
+++ b/src/app/components/home-features/home-features.component.html
@@ -36,7 +36,7 @@
         <div class="feature">
             <img src="/assets/img/features/feature-4.svg" alt="">
             <h3>Guides</h3>
-            <p>Our members will always be prepared with the best setups for drops and restocks.</p>
+            <p>Our members will always be prepared with the best setups for drops and releases.</p>
         </div>
 
     </div>
