--- a/src/app/components/mint-about/mint-about.component.html
+++ b/src/app/components/mint-about/mint-about.component.html
@@ -25,7 +25,7 @@
 
         <div class="sub__info">
             <h2 class="sub__title">
-                The <span style="color: #C5A368;">Green</span> Cactus
+                The <span style="color: #C5A368;">Gold</span> Cactus
             </h2>
             <span class="sub__descript">Renewal - Free</span>
         </div>
