--- a/src/app/components/mint-block/mint-block.component.scss
+++ b/src/app/components/mint-block/mint-block.component.scss
@@ -80,7 +80,16 @@
 
     &__count{
         font-size: 16px;
-        line-height: 85%;
+        line-height: 100%;
         color: #e5e5e5;
+        @media screen and ( max-width: 780px ) {
+            font-size: 14px;
+        }
+        a{
+            color: #2081E2;
+            &:hover{
+                text-decoration: underline;
+            }
+        }
     }
 }
