поставил кнопку soldout и ссылку на опенси без запросов

--- a/src/app/components/mint-block/mint-block.component.scss
+++ b/src/app/components/mint-block/mint-block.component.scss
@@ -93,3 +93,12 @@
         }
     }
 }
+
+
+
+#soldout{
+    width: 196px;
+    @media screen and ( max-width: 780px ) {
+        width: 162px;
+    }
+}
