--- a/src/app/components/mint-block/mint-block.component.html
+++ b/src/app/components/mint-block/mint-block.component.html
@@ -35,14 +35,14 @@
 
 <div class="mint">
     <!-- <button class="bg-btn mint__btn" disabled>Mint 6 February</button> -->
-    <app-mint-btn
+    <!-- <app-mint-btn
         (onGetMintedCount)="mintedCount = $event"
         (onGetSupplyCount)="supply = $event"
         (onSoldOut)="isSold = true"
-    ></app-mint-btn>
-
-    <span class="mint__count" *ngIf="mintedCount != supply && !isSold">Minted: {{mintedCount == undefined ? 'n' : mintedCount}}/{{supply}}</span>
-    <p class="mint__count" *ngIf="mintedCount == supply || isSold">
+    ></app-mint-btn> -->
+    <button class="bg-btn" disabled id="soldout">Sold out</button>
+    <!-- <span class="mint__count" *ngIf="mintedCount != supply && !isSold">Minted: {{mintedCount == undefined ? 'n' : mintedCount}}/{{supply}}</span> -->
+    <p class="mint__count">
         Click here to trade <br> 
         on <a [href]="env.openseaLink" target="_blank" rel="noopener">OpenSea</a>
     </p>
