добавил roadmap и about. Изменил sneak-pics и некоторый другой текстовый контент

--- a/src/app/components/home-features/home-features.component.html
+++ b/src/app/components/home-features/home-features.component.html
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        <div class="feature">
+        <div class="feature"> 
             <img src="/assets/img/features/feature-3.svg" alt="">
             <h3>Multiple profile support</h3>
             <p>Easily manage unlimited profiles with simple to use import/export settings.</p>
@@ -35,8 +35,8 @@
 
         <div class="feature">
             <img src="/assets/img/features/feature-4.svg" alt="">
-            <h3>Restock guides</h3>
-            <p>Our members will always be prepared with the best setups for drops and restocks.</p>
+            <h3>Guides</h3>
+            <p>Our members will always be prepared with the best setups for drops and releases.</p>
         </div>
 
     </div>
