--- a/src/app/components/home-footer/home-footer.component.scss
+++ b/src/app/components/home-footer/home-footer.component.scss
@@ -8,6 +8,7 @@ footer{
     background-image: url('/assets/img/background/footer.svg');
     background-position: top;
     justify-content: center;
+    // padding-bottom: 120px;
 }
 
 p{
