--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -8,8 +8,10 @@
     <section class="section main" >
         <main>
             <app-home-tools></app-home-tools>
+            <app-about></app-about>
             <app-home-features></app-home-features>
             <app-home-faq></app-home-faq>
+            <app-roadmap></app-roadmap>
             <app-pricing></app-pricing>
         </main>
         <app-home-footer></app-home-footer>
